# pytorch-docs-refactor-2

./: .env.example  .gitignore  README.md  minimal_env.yml  pyproject.toml  register_mcp.sh  run_mcp.sh  run_mcp_uvx.sh
.uvx/: tool.json
docs/: FIXES_SUMMARY.md  INTEGRATION_PLAN.md  MCP_INTEGRATION.md  MIGRATION_REPORT.md  refactoring_implementation_summary.md  refactoring_results.md
mcp_server_pytorch/: __init__.py  __main__.py
ptsearch/: cli.py  config.py  database.py  document.py  embedding.py  formatter.py  mcp.py  search.py  stdio.py
ptsearch/core/: __init__.py
ptsearch/protocol/: descriptor.py
tests/: check_environment.py  test_core.py  test_mcp_protocol.py  test_protocol_only.py  test_search_flow.py
tests/unit/: test_protocol.py
