[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-pytorch"
version = "0.1.0"
description = "PyTorch Documentation Search Tool with MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flask>=2.2.3",
    "openai>=1.2.4",
    "chromadb>=0.4.18",
    "tree-sitter>=0.20.1",
    "tree-sitter-languages>=1.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "numpy>=1.26.4",
    "werkzeug>=2.2.3",
    "flask-cors>=3.0.10",
]

[project.scripts]
ptsearch = "ptsearch.cli:main"
mcp-server-pytorch = "mcp_server_pytorch.__main__:main"

[tool.setuptools.packages]
find = {where = ["."]}

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]
