[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-pytorch"
version = "0.2.0"
description = "PyTorch Documentation Search Tool with MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flask>=2.2.3",
    "openai>=1.2.4",
    "chromadb>=0.4.18",
    "tree-sitter>=0.20.1",
    "tree-sitter-languages>=1.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "numpy>=1.26.4",
    "werkzeug>=2.2.3",
    "flask-cors>=3.0.10",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ptsearch = "ptsearch.cli:main"
mcp-server-pytorch = "mcp_server_pytorch.__main__:main"

[tool.setuptools.packages]
find = {where = ["."]}

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88